# influxdb-c

./: .gitignore  README.md  influx4c.h  influxdb.h
test/: CMakeLists.txt  main.cc  main.cpp  main_cc
