CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(VERSION 2.8)

PROJECT(influxdb_c_ut)

file(REMOVE_RECURSE ./tmp)
file(COPY main_cc DESTINATION ./tmp)
file(RENAME ./tmp/main_cc ./tmp/main.cc)
file(COPY ./tmp/main.cc DESTINATION .)
file(REMOVE_RECURSE ./tmp)

AUX_SOURCE_DIRECTORY(. DIR_SRCS)

LINK_LIBRARIES(mockcpp gtest pthread)

SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")

ADD_EXECUTABLE(influxdb_c_ut ${DIR_SRCS})