CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(VERSION 2.8)

PROJECT(influxdb_c_ut)

FILE(GENERATE OUTPUT main.cc INPUT main_cc)

AUX_SOURCE_DIRECTORY(. DIR_SRCS)

LINK_LIBRARIES(emock /usr/local/lib/libgtest.a pthread)

SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")

ADD_EXECUTABLE(influxdb_c_ut ${DIR_SRCS})